// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots COMPONENTS|Controls/Select With Redux Form 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c7 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: #96a0b3;
  opacity: 1;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 36px;
  font-family: inherit;
  padding-left: 11px;
  padding-right: 0;
  font-size: 16px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4::placeholder {
  color: #96a0b3;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4:focus {
  outline-style: none;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::placeholder {
  color: #b1bdcc;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c3:hover {
  border-color: #38afff;
  z-index: 1;
}

.c3 .combined-inputs-group {
  height: 100%;
}

.c8 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

.c5 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 100%;
  padding-left: 5px;
  padding-right: 7px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: top;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
}

.c2 .react-autosuggest__input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2 .react-autosuggest__input::-ms-clear,
.c2 .react-autosuggest__input::-webkit-search-cancel-button {
  display: none;
}

.c2 .react-autosuggest__input--open {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 .react-autosuggest__input--focused {
  outline: none;
}

.c2 .react-autosuggest__suggestions-container {
  display: none;
}

.c2 .react-autosuggest__suggestions-container--open {
  display: block;
}

.c2 .react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c2 .react-autosuggest__suggestion {
  cursor: pointer;
}

.c9 {
  margin: 3px 0 0;
  min-width: 90px;
  width: 100%;
  padding: 3px 0;
  position: absolute;
  top: 100%;
  box-shadow: 0 3px 9px 0 rgba(98,112,139,.7);
  border-radius: 3px;
  overflow: hidden;
  z-index: 10;
  background: #ffffff;
}

@media screen and (max-width:599px) {
  .responsive .c2,
  .responsive-booking .c2 {
    position: static;
  }
}

@media screen and (max-width:599px) {
  .responsive .c9,
  .responsive-booking .c9 {
    padding: 0;
    top: initial;
  }
}

@media screen and (max-width:599px) {
  .responsive .c1.c1,
  .responsive-booking .c1.c1 {
    position: relative;
  }
}

<div
  className="responsive c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    className="c1 c2"
    role="combobox"
  >
    <div
      className="c3"
      size="normal"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        autoComplete="off"
        className="react-autosuggest__input c4"
        form="COMPONENTS|Controls/Select"
        name="MadRabbitField"
        onBlur={[Function]}
        onChange={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Купить..."
        readOnly={true}
        size="normal"
        type="text"
        value=""
      />
      <div
        className="c5"
        onMouseDown={[Function]}
        size="normal"
      >
        <span
          className="c6"
        >
          <svg
            className="c7"
            fill="miscDark"
            name="angle"
            rotate=""
            size="normal"
          >
            <use
              xlinkHref="#kb_angle"
            />
          </svg>
        </span>
      </div>
      <div
        className="c8"
      />
    </div>
    <div
      className="react-autosuggest__suggestions-container c9"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Select With custom sections and keys 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c7 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: #96a0b3;
  opacity: 1;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 36px;
  font-family: inherit;
  padding-left: 11px;
  padding-right: 0;
  font-size: 16px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4::placeholder {
  color: #96a0b3;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4:focus {
  outline-style: none;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::placeholder {
  color: #b1bdcc;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c3:hover {
  border-color: #38afff;
  z-index: 1;
}

.c3 .combined-inputs-group {
  height: 100%;
}

.c8 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

.c5 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 100%;
  padding-left: 5px;
  padding-right: 7px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: top;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
}

.c2 .react-autosuggest__input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2 .react-autosuggest__input::-ms-clear,
.c2 .react-autosuggest__input::-webkit-search-cancel-button {
  display: none;
}

.c2 .react-autosuggest__input--open {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 .react-autosuggest__input--focused {
  outline: none;
}

.c2 .react-autosuggest__suggestions-container {
  display: none;
}

.c2 .react-autosuggest__suggestions-container--open {
  display: block;
}

.c2 .react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c2 .react-autosuggest__suggestion {
  cursor: pointer;
}

.c9 {
  margin: 3px 0 0;
  min-width: 90px;
  width: 100%;
  padding: 3px 0;
  position: absolute;
  top: 100%;
  box-shadow: 0 3px 9px 0 rgba(98,112,139,.7);
  border-radius: 3px;
  overflow: hidden;
  z-index: 10;
  background: #ffffff;
}

@media screen and (max-width:599px) {
  .responsive .c2,
  .responsive-booking .c2 {
    position: static;
  }
}

@media screen and (max-width:599px) {
  .responsive .c9,
  .responsive-booking .c9 {
    padding: 0;
    top: initial;
  }
}

@media screen and (max-width:599px) {
  .responsive .c1.c1,
  .responsive-booking .c1.c1 {
    position: relative;
  }
}

<div
  className="responsive c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    className="c1 c2"
    role="combobox"
  >
    <div
      className="c3"
      disabled={false}
      size="normal"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        autoComplete="off"
        className="react-autosuggest__input c4"
        disabled={false}
        name="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Купить..."
        readOnly={true}
        size="normal"
        type="text"
        value=""
      />
      <div
        className="c5"
        onMouseDown={[Function]}
        size="normal"
      >
        <span
          className="c6"
        >
          <svg
            className="c7"
            fill="miscDark"
            name="angle"
            rotate=""
            size="normal"
          >
            <use
              xlinkHref="#kb_angle"
            />
          </svg>
        </span>
      </div>
      <div
        className="c8"
      />
    </div>
    <div
      className="react-autosuggest__suggestions-container c9"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Select With multiply select 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c7 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: #96a0b3;
  opacity: 1;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 36px;
  font-family: inherit;
  padding-left: 11px;
  padding-right: 0;
  font-size: 16px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4::placeholder {
  color: #96a0b3;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4:focus {
  outline-style: none;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::placeholder {
  color: #b1bdcc;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c3:hover {
  border-color: #38afff;
  z-index: 1;
}

.c3 .combined-inputs-group {
  height: 100%;
}

.c8 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

.c5 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 100%;
  padding-left: 5px;
  padding-right: 7px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: top;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
}

.c2 .react-autosuggest__input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2 .react-autosuggest__input::-ms-clear,
.c2 .react-autosuggest__input::-webkit-search-cancel-button {
  display: none;
}

.c2 .react-autosuggest__input--open {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 .react-autosuggest__input--focused {
  outline: none;
}

.c2 .react-autosuggest__suggestions-container {
  display: none;
}

.c2 .react-autosuggest__suggestions-container--open {
  display: block;
}

.c2 .react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c2 .react-autosuggest__suggestion {
  cursor: pointer;
}

.c9 {
  margin: 3px 0 0;
  min-width: 90px;
  width: 100%;
  padding: 3px 0;
  position: absolute;
  top: 100%;
  box-shadow: 0 3px 9px 0 rgba(98,112,139,.7);
  border-radius: 3px;
  overflow: hidden;
  z-index: 10;
  background: #ffffff;
}

@media screen and (max-width:599px) {
  .responsive .c2,
  .responsive-booking .c2 {
    position: static;
  }
}

@media screen and (max-width:599px) {
  .responsive .c9,
  .responsive-booking .c9 {
    padding: 0;
    top: initial;
  }
}

@media screen and (max-width:599px) {
  .responsive .c1.c1,
  .responsive-booking .c1.c1 {
    position: relative;
  }
}

<div
  className="responsive c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    className="c1 c2"
    role="combobox"
  >
    <div
      className="c3"
      disabled={false}
      size="normal"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        autoComplete="off"
        className="react-autosuggest__input c4"
        disabled={false}
        name="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="0 suggestions selected"
        readOnly={true}
        size="normal"
        type="text"
        value=""
      />
      <div
        className="c5"
        onMouseDown={[Function]}
        size="normal"
      >
        <span
          className="c6"
        >
          <svg
            className="c7"
            fill="miscDark"
            name="angle"
            rotate=""
            size="normal"
          >
            <use
              xlinkHref="#kb_angle"
            />
          </svg>
        </span>
      </div>
      <div
        className="c8"
      />
    </div>
    <div
      className="react-autosuggest__suggestions-container c9"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Select default 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c7 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: #96a0b3;
  opacity: 1;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 0;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4::placeholder {
  color: #96a0b3;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4:focus {
  outline-style: none;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::placeholder {
  color: #b1bdcc;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c3:hover {
  border-color: #38afff;
  z-index: 1;
}

.c3 .combined-inputs-group {
  height: 100%;
}

.c8 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

.c5 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 100%;
  padding-left: 8px;
  padding-right: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: top;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
}

.c2 .react-autosuggest__input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2 .react-autosuggest__input::-ms-clear,
.c2 .react-autosuggest__input::-webkit-search-cancel-button {
  display: none;
}

.c2 .react-autosuggest__input--open {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 .react-autosuggest__input--focused {
  outline: none;
}

.c2 .react-autosuggest__suggestions-container {
  display: none;
}

.c2 .react-autosuggest__suggestions-container--open {
  display: block;
}

.c2 .react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c2 .react-autosuggest__suggestion {
  cursor: pointer;
}

.c9 {
  margin: 3px 0 0;
  min-width: 90px;
  width: 100%;
  padding: 3px 0;
  position: absolute;
  top: 100%;
  box-shadow: 0 3px 9px 0 rgba(98,112,139,.7);
  border-radius: 3px;
  overflow: hidden;
  z-index: 10;
  background: #ffffff;
}

@media screen and (max-width:599px) {
  .responsive .c2,
  .responsive-booking .c2 {
    position: static;
  }
}

@media screen and (max-width:599px) {
  .responsive .c9,
  .responsive-booking .c9 {
    padding: 0;
    top: initial;
  }
}

@media screen and (max-width:599px) {
  .responsive .c1.c1,
  .responsive-booking .c1.c1 {
    position: relative;
  }
}

<div
  className="responsive c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    className="c1 c2"
    role="combobox"
  >
    <div
      className="c3"
      disabled={false}
      size="large"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        autoComplete="off"
        className="react-autosuggest__input c4"
        disabled={false}
        name="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Купить..."
        readOnly={true}
        size="large"
        type="text"
        value=""
      />
      <div
        className="c5"
        onMouseDown={[Function]}
        size="large"
      >
        <span
          className="c6"
        >
          <svg
            className="c7"
            fill="miscDark"
            name="angle"
            rotate=""
            size="normal"
          >
            <use
              xlinkHref="#kb_angle"
            />
          </svg>
        </span>
      </div>
      <div
        className="c8"
      />
    </div>
    <div
      className="react-autosuggest__suggestions-container c9"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
</div>
`;
